--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>autochar</title>
   <script src="node_modules/p5/lib/p5.min.js"></script>
   <script src="node_modules/tone/build/Tone.min.js"></script>
-  <script src="./startAudioContext.js"></script>
+  <script src="./audioshim.js"></script>
   <script src="node_modules/fast-levenshtein/levenshtein.js"></script>
   <script src="cutils.js"></script>
   <script src="autochar.js"></script>
