--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
     var prod = false;
 
     var whiteOnColor = true;
-    var bgcol = [46, 127, 192	];
-    var hitcol = [255, 255, 255];
-    var txtcol = [0, 0, 0];
+    var bgcol = [137,172,198];
+    var hitcol = [ 76,87,96];
+    var txtcol = [255, 255, 255];
     var trgcol = [150, 0, 0];
     var rgb = [0, 0, 0];
   </script>
