--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     function setup()
     {
       noCursor();
+      frameRate(30);
       createCanvas(1024, 768);
       //createCanvas(680, 490);
 
