--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+<!--
+  TODO:
+    Shorten all definitions to a max length
+    Use responsive canvas setup 
+    Fit by width - largest font-sz that can fit the 2 biggest characters
+    Adjust aesthetic - add title
+    Add char definitions ?
+-->
+
 <head>
   <meta charset="UTF-8">
   <title>autochar</title>
@@ -12,10 +21,9 @@
   <script src="autochar.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script>
-    function preload()
-    {
-      if (doSound)
-      {
+
+    function preload() {
+      if (1) {
         bell = new Tone.Player("res/chime.wav").toMaster();
         stroke = new Tone.Player("res/stroke.wav").toMaster();
       }
@@ -25,70 +33,68 @@
       conf = loadJSON('config.json');
     }
 
-    function setup()
-    {
+    function setup() {
       noCursor();
       frameRate(30);
       createCanvas(1024, 768);
+      textAlign(CENTER);
+      textSize(14);
 
       if (window.innerWidth < 600) {
         var canvas = document.getElementById("defaultCanvas0");
         canvas.style.width = "";
         canvas.style.height = "";
       }
-      //createCanvas(680, 490);
-
-      textAlign(CENTER);
-      textSize(14);
 
       let testOnly = !(trad || simp);
       util = new CharUtils(chars, trad, simp, Levenshtein, showDefs);
       typer = new Autochar(util, onAction, onTarget, testOnly ? chars : null);
       word = typer.word.literal;
-
       console.log("1) [ ] -> " + word);
 
-      if (testOnly)
-      {
+      if (testOnly) {
         noLoop();
         return;
       }
       next();
     }
 
-    function draw()
-    {
+    function draw() {
       adjustColor();
       background(rgb[0], rgb[1], rgb[2]);
+      push();
       typer.draw(this._renderer, txtcol);
-      showDefs && text(def, width / 2, height - 10);
+      pop();
+      if (showDefs) {
+        push();
+        textSize(40);
+        fill(txtcol);
+        text(def, width / 2, 100);
+        pop();
+      }
       showMed && text(wmed, width - 12, 15);
       doPerf && logPerf();
     }
 
     function toggleMute(event) {
 
-      if (typeof event === 'boolean') doSound = event ? 0:1;
-      else doSound = doSound == 0 ? 1: 0;
+      if (typeof event === 'boolean') doSound = event ? 0 : 1;
+      else doSound = doSound == 0 ? 1 : 0;
       console.log("Sound", doSound);
       document.getElementById("mute").innerText = doSound == 0 ? 'unmute' : ' mute ';
     }
 
 
-    function next()
-    {
-      if (typer.step())
-      {
+    function next() {
+      if (typer.step()) {
         tid = setTimeout(next, strokeDelay); // drawing
       }
-      else
-      {
+      else {
         next(); // erasing
       }
     }
 
-    function onTarget(next, numStrokes, trigger)
-    {
+    function onTarget(next, numStrokes, trigger) {
       triggered = trigger;
       var numStrokes = typer.currentStrokeCount;
       var nSpeed = min(1, numStrokes / 12);
@@ -96,49 +102,36 @@
       //console.log(numStrokes, nSpeed, strokeDelay);
     }
 
-    function onAction(next, med)
-    {
-      if (next)
-      {
+    function onAction(nextWord, med) {
+      if (nextWord) {
         flashColors();
         playStroke(true);
         playBell()
-
-        if (showDefs && next.definition) def = next.definition;
-
+        if (showDefs && nextWord.definition) def = nextWord.definition;
         wmed = med + (util.language().startsWith('s') ? 's' : '');
-
-        console.log(++steps + ') ' + word + " -> " + next.literal, wmed, def);
-
-        word = next.literal;
-
+        console.log(++steps + ') ' + word + " -> " + nextWord.literal, wmed, def);
+        word = nextWord.literal;
         triggered = false;
       }
-      else
-      {
+      else {
         playStroke();
       }
 
     }
 
-    function flashColors()
-    {
-      for (var i = 0; i < rgb.length; i++)
-      {
+    function flashColors() {
+      for (var i = 0; i < rgb.length; i++) {
         rgb[i] = triggered ? trgcol[i] : hitcol[i];
         txtcol[i] = whiteOnColor ? 0 : 255;
       }
     }
 
-    function playBell()
-    {
-      if (doSound)
-      {
+    function playBell() {
+      if (doSound) {
         bell.playbackRate = random(.6, .9);
         bell.volume.value = random(.7, 1);
         bell.restart();
-        if (triggered)
-        {
+        if (triggered) {
           bell.playbackRate = random(.5, .7);
           bell.volume.value = 5;
           bell.start(200, 0, .1);
@@ -146,21 +139,17 @@
       }
     }
 
-    function playStroke(quiet)
-    {
-      if (doSound)
-      {
+    function playStroke(quiet) {
+      if (doSound) {
         stroke.playbackRate = random(.5, .7);
         stroke.volume.value = quiet ? -24 : -12;
         stroke.restart(undefined, 0, random(.05, .1)); //.05, 0.1));
       }
     }
 
-    function keyReleased()
-    {
-      if (false && key == ' ') clearTimeout(tid);
-      if (key == 't')
-      {
+    function keyReleased() {
+      if (key == ' ') clearTimeout(tid);
+      if (key == 't') {
         triggered = true;
         flashColors();
         playStroke(true);
@@ -168,18 +157,14 @@
       }
     }
 
-    function adjustColor()
-    {
-      if (!rgb)
-      {
+    function adjustColor() {
+      if (!rgb) {
         rgb = [0, 0, 0];
-        for (var i = 0; i < rgb.length; i++)
-        {
+        for (var i = 0; i < rgb.length; i++) {
           rgb[i] = bgcol[i];
         }
       }
-      for (var i = 0; i < rgb.length; i++)
-      {
+      for (var i = 0; i < rgb.length; i++) {
         if (rgb[i] != bgcol[i]) rgb[i] = lerp(rgb[i], bgcol[i], .05);
         //if (invertText) txtcol[i] = 255 - round(rgb[i]); else
         //txtcol[i] = 255 - round(rgb[i]);
@@ -192,10 +177,8 @@
       }
     }
 
-    function logPerf()
-    {
-      if (performance && performance.memory && steps - memt >= 20)
-      {
+    function logPerf() {
+      if (performance && performance.memory && steps - memt >= 20) {
         console.log('Perf: ' + round(frameRate()) + ' fps, ' +
           round(performance.memory.usedJSHeapSize / 1000000) +
           '/' + round(performance.memory.jsHeapSizeLimit / 1000000) + ' MB heap');
@@ -213,7 +196,7 @@
     var triggered = 0;
     var strokeDelay = 300;
 
-    var showDefs = 0;
+    var showDefs = 1;
     var showMed = 0;
     var doSound = 1;
     var doPerf = 1;
@@ -229,10 +212,10 @@
 </head>
 
 <body>
-  <button id="mute">mute</button>
+  <!--   <button id="mute">mute</button>
   <script>
   document.getElementById("mute").onclick = toggleMute;
-  </script>
+  </script> -->
 </body>
 
 </html>
