--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>autochar</title>
+  <title>Radical of the Vertical Heart</title>
   <script src="node_modules/p5/lib/p5.min.js"></script>
   <script src="node_modules/tone/build/Tone.min.js"></script>
   <script src="./audioshim.js"></script>
